--- a/asserts/css/main.css
+++ b/asserts/css/main.css
@@ -249,7 +249,8 @@ form .form-row .form-item{
 }
 
 .side-nav-cont .side-nav-link-item{
-    padding: 15px 20px;
+    padding: 10px 20px;
+    font-size: 16px;
 }
 /*#endregion*/
 
