--- a/views/default.html.twig
+++ b/views/default.html.twig
@@ -51,7 +51,7 @@
                     </li>
                     {% if isLoggedIn %}
                     <li class="side-nav-link">
-                        <a href="/logout" class="side-nav-link-item btn btn-full-width {% if route == '/about' %}btn-primary{% endif %}">Log Out</a>
+                        <a href="/logout" class="side-nav-link-item btn btn-full-width">Log Out</a>
                     </li>
                     {% endif %}
                 </ul>
